--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ const firebaseConfig = {
   storageBucket: "graduationtracker.firebasestorage.app",
   messagingSenderId: "647816676415",
   appId: "1:647816676415:web:9e108b6fce2e78e162e48a"
+  measurementId: "G-QJ1MBVBEF1"
 };
 
 const app = initializeApp(firebaseConfig);
