--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Firebase SDK -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-app.js";
-import { getFirestore, collection, getDocs, addDoc, updateDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js";
+import { getFirestore, collection, onSnapshot, addDoc, updateDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyDs3ZFGQHRMKx2gEP_wmYOON2g41ztWNGI",
@@ -17,15 +17,16 @@ const firebaseConfig = {
   projectId: "graduationtracker",
   storageBucket: "graduationtracker.firebasestorage.app",
   messagingSenderId: "647816676415",
-  appId: "1:647816676415:web:9e108b6fce2e78e162e48a"
+  appId: "1:647816676415:web:9e108b6fce2e78e162e48a",
   measurementId: "G-QJ1MBVBEF1"
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
+// 將 Firebase 物件掛到 window 方便 script.js 使用
 window.firebaseDB = db;
-window.firebaseFunctions = { collection, getDocs, addDoc, updateDoc, deleteDoc, doc };
+window.firebaseFunctions = { collection, onSnapshot, addDoc, updateDoc, deleteDoc, doc };
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
