--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.1/firebas
 import { getFirestore, collection, onSnapshot, addDoc, updateDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js";
 
 const firebaseConfig = {
-  apiKey: "AIzaSyDs3ZFGQHRMKx2gEP_wmYOON2g41ztWNGI",
-  authDomain: "graduationtracker.firebaseapp.com",
-  projectId: "graduationtracker",
-  storageBucket: "graduationtracker.firebasestorage.app",
-  messagingSenderId: "647816676415",
-  appId: "1:647816676415:web:9e108b6fce2e78e162e48a",
-  measurementId: "G-QJ1MBVBEF1"
+  apiKey: "YOUR_API_KEY",
+  authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+  projectId: "YOUR_PROJECT_ID",
+  storageBucket: "YOUR_PROJECT_ID.appspot.com",
+  messagingSenderId: "YOUR_SENDER_ID",
+  appId: "YOUR_APP_ID"
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
-
-// 將 Firebase 物件掛到 window 方便 script.js 使用
 window.firebaseDB = db;
 window.firebaseFunctions = { collection, onSnapshot, addDoc, updateDoc, deleteDoc, doc };
 </script>
